--- a/package.json
+++ b/package.json
@@ -4,8 +4,12 @@
   "private": true,
   "dependencies": {
     "react": "^15.6.1",
+    "react-autosuggest": "^9.3.2",
     "react-dom": "^15.6.1",
-    "react-scripts": "1.0.13"
+    "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2",
+    "react-scripts": "1.0.13",
+    "redux": "^3.7.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -18,7 +22,6 @@
     "eslint-config-defaults": "^9.0.0",
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-react": "^7.3.0",
-    "flow-bin": "^0.54.1",
-    "react-bootstrap": "^0.31.3"
+    "flow-bin": "^0.54.1"
   }
 }
