--- a/.eslintrc
+++ b/.eslintrc
@@ -7,6 +7,7 @@
     },
     "rules": {
         "react/jsx-uses-react": "error",
-        "react/jsx-uses-vars": "error"
+        "react/jsx-uses-vars": "error",
+        "react/prop-types": 0
     }
 }
