--- a/app/package.json
+++ b/app/package.json
@@ -21,6 +21,7 @@
     "express": "~4.15.2",
     "express-session": "^1.15.5",
     "express-validator": "^3.2.1",
+    "flow-bin": "^0.55.0",
     "jade": "~1.11.0",
     "jsonwebtoken": "^8.0.1",
     "md5": "^2.2.1",
