--- a/app/package.json
+++ b/app/package.json
@@ -19,6 +19,7 @@
     "eslint-config-defaults": "^9.0.0",
     "eslint-plugin-react": "^7.3.0",
     "express": "~4.15.2",
+    "express-jwt": "^5.3.0",
     "express-session": "^1.15.5",
     "express-validator": "^3.2.1",
     "flow-bin": "^0.55.0",
