--- a/app/.eslintrc.json
+++ b/app/.eslintrc.json
@@ -1,3 +1,13 @@
 {
-    "extends": "airbnb-base"
+    "extends": "airbnb-base",
+    "rules": {
+        "indent": [
+            "error",
+            4
+        ],
+        "linebreak-style": [
+            "off",
+            "CRLF"
+        ]
+    }
 }
